[gd_scene load_steps=5 format=3 uid="uid://bd4m5aw50fvff"]

[ext_resource type="Script" path="res://Main Menu/main_menu.gd" id="1_epbv5"]
[ext_resource type="Texture2D" uid="uid://bdjqhjajx5yhj" path="res://Main Menu/other main menu.png" id="2_52hmm"]
[ext_resource type="PackedScene" uid="uid://b3i7t8n7rugo" path="res://Pause Menu/pause_menu.tscn" id="3_ywgri"]

[sub_resource type="SystemFont" id="SystemFont_c70ce"]
font_names = PackedStringArray("Impact")

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_epbv5")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_52hmm")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_c70ce")
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_c70ce")
theme_override_font_sizes/font_size = 24
text = "Exit Game"

[node name="PauseMenu" parent="." instance=ExtResource("3_ywgri")]
layout_mode = 1
offset_left = 530.0
offset_top = 228.0
offset_right = 530.0
offset_bottom = 228.0
